--- a/project.css
+++ b/project.css
@@ -7,6 +7,10 @@
     --dark-blue: #5B90B1;
 }
 
+::selection {
+    background: var(--pale-purple);
+}
+
 * {
     font-family: 'Open Sans', sans-serif;
 }
@@ -19,7 +23,12 @@ html {
 body {
     height: 100%;
     font-size: 18px;
-    text-align: center;
+    text-align: left;
+}
+
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
 }
 
 /* Heading 1 */
@@ -44,6 +53,11 @@ h3 {
     font-size: 20px;
 }
 
+p {
+    padding-left: 100px;
+    padding-right: 100px;
+}
+
 /* Gets rid of the underline for links */
 nav a, nav a:focus, nav a:active, nav a:hover, button:focus {
     border:0;
@@ -57,7 +71,7 @@ nav a, nav a:focus, nav a:active, nav a:hover, button:focus {
     position: fixed;
     top: 0;
     transition:top 0.3s;
-    box-shadow: 0px 1px 15px 1px var(--pale-pink);
+    box-shadow: 0px 0px 15px 0px var(--pale-pink);
     background-color: white;
     color: var(--pale-pink);
 }
@@ -124,24 +138,118 @@ nav a, nav a:focus, nav a:active, nav a:hover, button:focus {
 
 /* Site intro */
 .hello {
-    text-align: left;
     padding-left: 100px;
     padding-right: 60%;
     padding-top: 150px;
+    display: grid;
+    grid-template-columns: 3fr 1fr;
 }
 
 .title {
-    text-align: left;
     padding-left: 100px;
-    padding-right: 60%;
 }
 
 .description, .contact {
-    text-align: left;
     padding-left: 100px;
     padding-right: 40%;
 }
 
 .email {
     color: var(--pale-pink);
+}
+
+#projects, #edu, #awards, #words, #plan, .return {
+    padding-top: 50px;
+}
+
+.education {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    width: 90%;
+}
+
+.interests {
+    padding-left: 100px;
+    display: grid;
+    padding-right: 100px;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    width: 90%;
+}
+
+.projectcats:hover {
+    background: var(--pale-pink);
+}
+
+.date {
+    color: var(--pale-pink);
+}
+
+#uts, #research, #prototype {
+    padding-left: 0px;
+}
+
+#uwo, #website {
+    padding-left: 0px;
+    padding-right: 50px;
+}
+
+.words {
+    padding-left: 100px;
+}
+
+.words a {
+    text-decoration: none;
+    color: var(--less-pale-pink);
+}
+
+.words a:hover {
+    color: var(--pale-pink);
+}
+
+.footer {
+    background: var(--pale-pink);
+    color: white;
+    margin-top: 100px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 50px;
+    width: 100%;
+    font-weight: bolder;
+    bottom: 0;
+}
+
+/* Delete this when finished all pages, or keep for short pages */
+.placeholderfooter {
+    background: var(--pale-pink);
+    color: white;
+    margin-top: 100px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 50px;
+    width: 100%;
+    font-weight: bolder;
+    bottom: 0;
+    position: absolute;
+}
+
+/* Project intros */
+.projectintro {
+    padding-left: 100px;
+    padding-right: 60%;
+    padding-top: 150px;
+}
+
+.description a, .return a {
+    text-decoration: none;
+    color: var(--less-pale-pink);
+}
+
+.description a:hover, .return a:hover {
+    color:var(--pale-pink)
+}
+
+.timeline {
+        display: grid;
+        grid-template-columns: 1fr 3fr 3fr 3fr;
+        width: 90%;
 }
