--- a/project.css
+++ b/project.css
@@ -1,8 +1,8 @@
 :root{
-    --pale-pink: #EAC8D8;
-    --less-pale-pink: #e985b4;
+    --light-text: #999999; /* #EAC8D8 */
+    --less-light-text: black; /* #e985b4 */
     --pale-purple: #C5B2D1;
-    --lilac: #94A0C6;
+    --text-colour: #343434;
 }
 
 ::selection {
@@ -10,7 +10,7 @@
 }
 
 * {
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Montserrat', sans-serif;
 }
 
 html {
@@ -31,30 +31,32 @@ body {
 
 /* Heading 1 */
 h1 {
-    color: var(--less-pale-pink);
+    color: var(--less-light-text);
     margin: auto;
     padding-right: 20%;
     font-style: bold;
-    font-size: 32px;
+    font-size: 26px;
     text-align: left;
 }
 
 /* Heading 2 */
 h2 {
     font-weight: bold;
-    font-size: 26px;
+    font-size: 22px;
 }
 
 /* Heading 3 */
 h3 {
     font-weight: bolder;
     font-style: bold;
-    font-size: 20px;
+    font-size: 18px;
 }
 
 p {
     padding-left: 25%;
     padding-right: 25%;
+    color: var(--text-colour);
+    font-family: 'Open Sans', sans-serif;
 }
 
 /* Gets rid of the underline for links */
@@ -70,26 +72,20 @@ nav a, nav a:focus, nav a:active, nav a:hover, button:focus {
     position: fixed;
     top: 0;
     transition:top 0.3s;
-    box-shadow: 0px 0px 15px 0px var(--pale-pink);
+    box-shadow: 0px 0px 15px 0px var(--light-text);
     background-color: white;
-    color: var(--pale-pink);
+    color: var(--light-text);
 }
 
 /* Specifically the nav bar LINKS (a elements) */
 .nav-link {
-    letter-spacing: 2px;
-    font-weight: bold;
-    font-size: 26px;
+    font-size: 22px;
     list-style-type: none;
-    color: var(--pale-pink);
-
+    color: var(--light-text);
+    font-weight: bold;
     text-align: right;
-    padding-left: 30px;
+    padding-left: 35px;
     text-decoration: none;
-}
-
-.nav-link:hover {
-    color: var(--less-pale-pink);
 }
 
 
@@ -97,7 +93,7 @@ nav a, nav a:focus, nav a:active, nav a:hover, button:focus {
 .links {
     list-style-type: none;
     margin: 0;
-    padding-top: 20px;
+    padding-top: 16px;
     padding-right: 25%;
     
     display: flex;
@@ -107,8 +103,7 @@ nav a, nav a:focus, nav a:active, nav a:hover, button:focus {
 
 /* Navbar name and Title class */ 
 .navbar-name, .title {
-    color: var(--less-pale-pink);
-    letter-spacing:2px;
+    color: var(--less-light-text);
 }
 
 .navbar-name {
@@ -123,7 +118,7 @@ nav a, nav a:focus, nav a:active, nav a:hover, button:focus {
     text-align: justify;
     padding: 14px 16px;
     text-decoration: none;
-    color: var(--pale-pink);
+    color: var(--light-text);
 }
 
 
@@ -131,7 +126,7 @@ nav a, nav a:focus, nav a:active, nav a:hover, button:focus {
 .hello {
     padding-left: 25%;
     padding-right: 25%;
-    padding-top: 150px;
+    padding-top: 120px;
     display: grid;
     grid-template-columns: 3fr 1fr;
 }
@@ -142,7 +137,11 @@ nav a, nav a:focus, nav a:active, nav a:hover, button:focus {
 }
 
 .email {
-    color: var(--pale-pink);
+    color: var(--light-text);
+}
+
+.email:hover {
+    color: var(--less-light-text);
 }
 
 #projects, #awards, #skills, .return {
@@ -150,28 +149,39 @@ nav a, nav a:focus, nav a:active, nav a:hover, button:focus {
 }
 
 .projectcats:hover {
-    background: var(--pale-pink);
+    background: var(--light-text);
 }
 
 .date {
-    color: var(--pale-pink);
+    color: var(--light-text);
 }
 
 .description a, .return a {
     text-decoration: none;
-    color: var(--less-pale-pink);
+    color: var(--less-light-text);
 }
 
 .description a:hover, .return a:hover {
-    color:var(--pale-pink)
+    color:var(--light-text)
 }
 
-#about-on-about {
-    color:var(--less-pale-pink)
+#about-on-about, .nav-link:hover {
+    text-decoration: underline;
 }
 
 #temp {
     padding-left: 25%;
     padding-right: 0%;
     padding-top: 150px;
+}
+
+.contact {
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    height: 40px;
+}
+
+.contact a {
+    margin-right: 25px;
 }
