--- a/project.css
+++ b/project.css
@@ -1,14 +1,14 @@
 :root{
-    --light-text: #b5b5b5; /* Nav bar, award italics, etc. */
+    --light-text: #977e37; /* Nav bar etc. */
     --less-light-text: #e4e4e4; 
     --selection: #8a928f;
     --text-colour: #e3ebe7;
     --background-colour: #0d251c;
-    --test: #c9a648;
+    --test: #dcb344;
 }
 
 ::selection {
-    background: var(--test);
+    background: var(--light-text);
 }
 
 * {
@@ -80,7 +80,7 @@ nav a, nav a:focus, nav a:active, nav a:hover, button:focus {
     position: fixed;
     top: 0;
     transition:top 0.3s;
-    box-shadow: 0px 0px 30px 0px var(--test);
+    box-shadow: 0px 0px 40px 0px var(--test);
     background-color: var(--background-colour);
 }
 
@@ -195,7 +195,7 @@ nav a, nav a:focus, nav a:active, nav a:hover, button:focus {
 /* For projects.html */
 
 #writing {
-    padding-top: 100px;
+    padding-top: 120px;
 }
 
 strong {
@@ -219,7 +219,7 @@ a:hover {
     * {
         text-align: left;
     }
-    
+
     #pfp {
         visibility: hidden;
     }
@@ -227,7 +227,7 @@ a:hover {
     .hello {
         padding-left: 25%;
         padding-right: 0%;
-        padding-top: 150px;
+        padding-top: 170px;
     }
 
     .links {
@@ -251,7 +251,21 @@ a:hover {
     }
 
     #writing {
-        padding-top: 150px;
+        padding-top: 170px;
+    }
+
+    p, .hello, .title, .description {
+        padding-left: 10%;
+        padding-right: 10%;
+    }
+
+    #hi {
+        padding-right: 0%;
+        margin-right: 0%;
+    }
+
+    .contact {
+        padding-left: 10%;
     }
 
 }
@@ -272,39 +286,36 @@ a:hover {
     .navbar-name {
         padding-left: 36%;
     }
-
-    p, .hello, .title, .description {
-        padding-left: 10%;
-        padding-right: 10%;
-    }
-
-    #hi {
-        padding-right: 0%;
-        margin-right: 0%;
-    }
-
 }
 
 @media screen and (max-width: 650px) {
     .navbar-name {
-        padding-left: 35%;
+        padding-left: 30%;
+    }
+
+    .links {
+        margin: 0;
+        padding-top: 0px;
+        padding-right: 25%;
+        padding-left: 15%;
+        padding-bottom: 15px;
     }
 }
 
 @media screen and (max-width: 600px) { 
     .navbar-name {
-        padding-left: 34%;
+        padding-left: 29%;
     }
 }
 
 @media screen and (max-width: 550px) { 
     .navbar-name {
-        padding-left: 33%;
+        padding-left: 28%;
     }
 }
 
 @media screen and (max-width: 500px) { 
     .navbar-name {
-        padding-left: 32%;
+        padding-left: 27%;
     }
 }
