--- a/project.css
+++ b/project.css
@@ -1,349 +1,77 @@
-:root{
-    --light-text: #977e37; /* Nav bar etc. */
-    --less-light-text: #e4e4e4; 
-    --selection: #8a928f;
-    --text-colour: #e3ebe7;
-    --background-colour: #0d251c;
-    --test: #dcb344;
-}
-
-::selection {
-    background: var(--light-text);
-}
-
-* {
-    font-family: 'Montserrat', sans-serif;
-    background-color: 	var(--background-colour);
+:root {
+    --main:#0069a8;
+    --accent: #0084d1;
+    --dark: #024a70;
 }
 
 html {
-    height: 100%;
-    max-width: 100%;
-    overflow-x: hidden;
+    margin-bottom: 10%;
+    margin-top: 5%;
+    margin-left: 26%;
+    margin-right: 26%;
+}
+
+body, html {
+    cursor: url(https://64.media.tumblr.com/tumblr_m2wjm51YYn1qfamg6.gif), pointer;
 
 }
 
-body {
-    height: 100%;
-    font-size: 16px;
-    text-align: justify;
-    margin: 0;
-    max-width: 100%;
-}
+* {
+    font-family: 'Crimson Pro', serif;
+    background-color: #fbf7f5;
+    font-size: 18px;
+} 
+
 
 /* Heading 1 */
 h1 {
-    color: var(--less-light-text);
-    margin: auto;
-    padding-right: 20%;
+    color: var(--accent);
     font-style: bold;
-    font-size: 28px;
-    text-align: left;
+    font-size: 24px;
 }
 
 /* Heading 2 */
 h2 {
     font-weight: bold;
-    font-size: 24px;
-    color: var(--less-light-text);
+    font-size: 20px;
+    color: var(--main);
 }
 
 /* Heading 3 */
 h3 {
     font-weight: bolder;
     font-style: bold;
-    font-size: 18px;
-    color: var(--less-light-text);
+    font-size: 16px;
+    color: var(--main);
 }
+
 
 h1, h2, h3 {
     font-family: 'Platypi', serif;
 }
 
-p {
-    padding-left: 25%;
-    padding-right: 25%;
-    color: var(--text-colour);
-    font-family: 'Montserrat', sans-serif;
-}
-
 /* Gets rid of the underline for links */
-nav a, nav a:focus, nav a:active, nav a:hover, button:focus {
-    border:0;
-    outline:none;
-    text-decoration:none;
-}
-
-/* Navigation bar div (background/format) */
-.navbar {
-    width: 100%;
-    position: fixed;
-    top: 0;
-    transition:top 0.3s;
-    box-shadow: 0px 0px 40px 0px var(--test);
-    background-color: var(--background-colour);
-}
-
-/* Specifically the nav bar LINKS (a elements) */
-.nav-link {
-    font-size: 24px;
-    list-style-type: none;
-    color: var(--light-text);
-    font-weight: bold;
-    text-align: right;
-    padding-left: 35px;
+a {
     text-decoration: none;
-    font-family: 'Platypi', 'serif';
+    color: var(--dark);
 }
 
-
-/* List of links (ul element) */ 
-.links {
-    list-style-type: none;
-    margin: 0;
-    padding-top: 16px;
-    padding-right: 25%;
-    
-    display: flex;
-    flex-flow: row nowrap;
-    justify-content: flex-end;
-}
-
-/* Navbar name and Title class */ 
-.navbar-name h2 {
-    color: var(--test);
-}
-
-.navbar-name {
-    float: left;
-    padding-left: 25%;
-    pointer-events: none;
-}
-
-/* Nav bar title and links */
-.nav a {
-    display: inline;
-    text-align: justify;
-    padding: 14px 16px;
+a:hover {
+    color: var(--accent);
     text-decoration: none;
-    color: var(--light-text);
-}
-
-
-/* Site intro */
-.hello {
-    padding-left: 25%;
-    padding-right: 25%;
-    padding-top: 120px;
-    display: grid;
-    grid-template-columns: 3fr 1fr;
-}
-
-#pfp {
-    border-radius: 50%;
-}
-
-.title, .description, .contact {
-    padding-left: 25%;
-    padding-right: 25%;
-}
-
-.email {
-    color: var(--light-text);
-}
-
-.email:hover {
-    color: var(--test);
-}
-
-#awards, #skills, .return {
-    padding-top: 50px;
-}
-
-#about,  #awards, #skills, #hi, #writing, #coding {
-    color:#ffffff;
 }
 
 .date {
-    color: var(--test);
+    color: var(--dark);
 }
 
-.description a, .return a {
-    text-decoration: none;
-    color: var(--less-light-text);
-}
-
-.description a:hover, .return a:hover {
-    color:var(--test);
-}
-
-#about-on-about, .nav-link:hover {
-    text-decoration: underline;
+#work, #awards {
+    margin-top: 7%;
 }
 
 .contact {
     display: flex;
     justify-content: left;
     align-items: center;
-    height: 40px;
-}
-
-.contact a {
-    margin-right: 25px;
-}
-
-/* For projects.html */
-
-#writing {
-    padding-top: 120px;
-}
-
-strong {
-    color: var(--less-light-text);
-}
-
-a {
-    color: white;
-    text-decoration: none;
-}
-
-a:hover {
-    color: var(--test);
-}
-
-.above-collapse {
-    padding-bottom: 20px;
-}
-
-@media screen and (max-width: 850px) { /* for mobile or small screens */
-    * {
-        text-align: left;
-    }
-
-    #pfp {
-        visibility: hidden;
-    }
-
-    .hello {
-        padding-left: 25%;
-        padding-right: 0%;
-        padding-top: 170px;
-    }
-
-    .links {
-        margin: 0;
-        padding-top: 0px;
-        padding-right: 25%;
-        padding-left: 25%;
-        padding-bottom: 15px;
-        
-        display: flex;
-        flex-flow: row nowrap;
-        justify-content: center;
-    }
-
-    .navbar-name {
-        padding-left: 39%;
-    }
-
-    #top {
-        font-size: 30px;
-    }
-
-    #writing {
-        padding-top: 170px;
-    }
-
-    p, .hello, .title, .description {
-        padding-left: 10%;
-        padding-right: 10%;
-    }
-
-    #hi {
-        padding-right: 0%;
-        margin-right: 0%;
-    }
-
-    .contact {
-        padding-left: 10%;
-    }
-
-    h1 {
-        padding-right: 0%;
-    }
-
-
-    #pfp {
-        max-width: 2px;
-        max-height: 2px;
-   }
-
-}
-
-@media screen and (max-width: 800px) {
-    .navbar-name {
-        padding-left: 38%;
-    }
-}
-
-@media screen and (max-width: 750px) {
-    .navbar-name {
-        padding-left: 37%;
-    }
-}
-
-@media screen and (max-width: 700px) {
-    .navbar-name {
-        padding-left: 36%;
-    }
-}
-
-@media screen and (max-width: 650px) {
-    .navbar-name {
-        padding-left: 30%;
-    }
-
-    .links {
-        margin: 0;
-        padding-top: 0px;
-        padding-right: 25%;
-        padding-left: 15%;
-        padding-bottom: 15px;
-    }
-}
-
-@media screen and (max-width: 600px) { 
-    .navbar-name {
-        padding-left: 29%;
-    }
-}
-
-@media screen and (max-width: 550px) { 
-    .navbar-name {
-        padding-left: 28%;
-    }
-}
-
-@media screen and (max-width: 500px) { 
-    .navbar-name {
-        padding-left: 27%;
-    }
-}
-
-@media screen and (max-width: 450px) { 
-    .navbar-name {
-        padding-left: 24%;
-    }
-}
-
-@media screen and (max-width: 400px) { 
-    .navbar-name {
-        padding-left: 22%;
-    }
-}
-
-@media screen and (max-width: 350px) { 
-    .navbar-name {
-        padding-left: 21%;
-    }
+    gap: 3%;
 }
