--- a/project.css
+++ b/project.css
@@ -75,3 +75,12 @@ a:hover {
     align-items: center;
     gap: 3%;
 }
+
+@media screen and (max-width: 700px) {
+    html {
+        margin-bottom: 10%;
+        margin-top: 5%;
+        margin-left: 10%;
+        margin-right: 10%;
+    }
+}
